# server_iot

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  tailwind.config.js
alembic/versions/: 16668ae4a277_add_recommendationlog_table.py  28d29239bb9c_add_pmv_log_table.py  5bd3d6703520_add_t_indoor_and_h_indoor_to_pmv_log.py  84979420af7d_add_emissionlog_table.py
app/: models.py
app/routers/: actemp.py  aht10.py  analysis.py  camera.py  carbonemission.py  insight.py  openweather.py  pmvashrae.py  pzem.py
app/service/: ac_temp.py  emission.py  interest.py  open_weather.py  pmv.py  pzem_sensor.py  web_cam.py
app/templates/: aht10.html  camera.html  home.html  insight.html  layout.html  navbar.html  openweather.html  pzem.html
app/utils/: camera_manager.py
