[project]
name = "server-iot"
version = "0.1.0"
description = "library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "apscheduler>=3.11.0",
    "fastapi>=0.115.8",
    "fastapi-tailwind>=1.0.2b1",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "cython",
    "pillow>=7.0.0",
    "numpy>=1.18.1",
    "opencv-python>=4.1.2",
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "pytest==7.1.3",
    "tqdm==4.64.1",
    "scipy>=1.7.3",
    "matplotlib>=3.4.3",
    "mock==4.0.3",
    "imageai>=3.0.3",
    "modbus-tk>=1.1.4",
    "joblib>=1.4.2",
    "scikit-learn>=1.6.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pythermalcomfort>=3.1.1",
]

[[tool.pip.additional-index-urls]]
url = "https://download.pytorch.org/whl/cpu"
